# not-a-rag-chat

./: README.md  pyproject.toml  requirements.txt
scripts/: chat-completion.py
src/: chat-completion.py
src/notebooks/: chunking-semantic-splitter.ipynb  chunking-text-splitter.ipynb  loaded_elements.json
src/notebooks/outputs-text-splitter/elements/: 6608-0a1d0058940a3f53d22f922124b0e884.json  6608-0a2e8a9ec5446b75ee84f3b02c5ef686.json  6608-0a5f52f754cb4976bc8685974ac6a916.json  6608-0a8352b90299a624fec5b492f07d38b1.json  6608-0af9a89a5bd79cb8becd09af9eaeeac0.json  6608-0b2b2a3568d30e31ff80e4ab897e6711.json  6608-0b3ec29e2bc981e9a0dcd22dee8fd74b.json  6608-e36b4c860a90e543f5aff1c99d8057be.json
src/notebooks/outputs-text-splitter/elements/chunks/: 6608-06e0e21ca08fc4373941c452c916f536_chunks.json  6608-0a1d0058940a3f53d22f922124b0e884_chunks.json  6608-0a2e8a9ec5446b75ee84f3b02c5ef686_chunks.json  6608-0a5f52f754cb4976bc8685974ac6a916_chunks.json  6608-0a8352b90299a624fec5b492f07d38b1_chunks.json  6608-0af9a89a5bd79cb8becd09af9eaeeac0_chunks.json  6608-0b2b2a3568d30e31ff80e4ab897e6711_chunks.json  6608-0b3ec29e2bc981e9a0dcd22dee8fd74b_chunks.json  6608-e36b4c860a90e543f5aff1c99d8057be_chunks.json
src/notebooks/outputs-text-splitter/vectorstores/6608-06e0e21ca08fc4373941c452c916f536/: chroma.sqlite3
src/notebooks/outputs-text-splitter/vectorstores/6608-0a1d0058940a3f53d22f922124b0e884/: chroma.sqlite3
src/notebooks/outputs/elements/: 6608-06e0e21ca08fc4373941c452c916f536.json
(+7 files in other folders)
