[project]
name = "not-a-rag-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "pdfminer>=20191125",
    "pypdf>=6.4.0",
    "unstructured[pdf]>=0.18.21",
]
